# photo_mosaic

./: .gitignore  Dockerfile  README.md  app.py  candlemosaic.py  config.py  db.py  docker-compose.yaml  output.txt  package-lock.json  package.json  pyproject.toml
adapters/: __init__.py  database.py  storage.py
core/: __init__.py  models.py  services.py
infrastructure/: __init__.py  auth.py  channels.py  image_processor.py  image_sync.py  logger.py
interfaces/: __init__.py
interfaces/api/: __init__.py  admin_routes.py  routes.py  websockets.py
interfaces/web/: __init__.py
interfaces/web/templates/: admin.html.jinja  display.html.jinja  reset_confirm.html.jinja  upload.html.jinja
